--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
     "name": "personal-blog",
     "version": "0.1.0",
     "private": true,
-    "homepage": "https://nguyencongtan98.github.io/blog-tannc",
     "dependencies": {
         "@testing-library/jest-dom": "^4.2.4",
         "@testing-library/react": "^9.5.0",
@@ -11,9 +10,11 @@
         "@types/node": "^12.12.62",
         "@types/react": "^16.9.49",
         "@types/react-dom": "^16.9.8",
+        "@types/react-router-dom": "^5.1.6",
         "gh-pages": "^3.1.0",
         "react": "^16.13.1",
         "react-dom": "^16.13.1",
+        "react-router-dom": "^5.2.0",
         "react-scripts": "3.4.3",
         "typescript": "^3.7.5",
         "yarn": "^1.22.10"
@@ -23,8 +24,6 @@
         "build": "react-scripts build",
         "test": "react-scripts test",
         "eject": "react-scripts eject",
-        "predeploy": "npm run build",
-        "deploy": "gh-pages -d build",
         "storybook": "start-storybook -p 6006 -s public",
         "build-storybook": "build-storybook -s public"
     },
