--- a/package.json
+++ b/package.json
@@ -10,12 +10,15 @@
         "@types/node": "^12.12.62",
         "@types/react": "^16.9.49",
         "@types/react-dom": "^16.9.8",
+        "@types/react-redux": "^7.1.9",
         "@types/react-router-dom": "^5.1.6",
         "gh-pages": "^3.1.0",
         "react": "^16.13.1",
         "react-dom": "^16.13.1",
+        "react-redux": "^7.2.1",
         "react-router-dom": "^5.2.0",
         "react-scripts": "3.4.3",
+        "redux": "^4.0.5",
         "typescript": "^3.7.5",
         "yarn": "^1.22.10"
     },
